<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PWM Sample</string>
    <string name="frequency">Frequency (Hz): </string>
    <string name="duty_cycle">Duty Cycle (%): </string>
    <string name="enable">Enable </string>
    <string name="polarity">Polarity: </string>
    <string name="normal">Normal</string>
    <string name="inverted">Inverted</string>
    <string name="default_frequency">1</string>
    <string name="default_duty">50</string>
    <string name="apply">Apply</string>
    <string name="channel">PWM Channel: </string>
    <string name="chip">PWM Chip: </string>

</resources>
